Fix TOC scroll alignment difference between document's root and sub-folders

--- a/src/app/client/style/report_workspace.css
+++ b/src/app/client/style/report_workspace.css
@@ -23,6 +23,10 @@
     margin: 5px 7px 0px 7px;
 }
 
+#report-toc-tree .wb-row {
+    cursor: pointer;
+}
+
 /* Footer with action buttons */
 .report-workspace-footer {
     display: flex;
